Fixed layout issues

--- a/src/components/atoms/Text/index.module.scss
+++ b/src/components/atoms/Text/index.module.scss
@@ -1,7 +1,6 @@
 @import '../../../styles/variables';
 
 .app-title {
-  display: block;
   font-family: $skygraze;
 }
 
