--- a/src/components/molecules/Menu/index.module.scss
+++ b/src/components/molecules/Menu/index.module.scss
@@ -1,16 +1,13 @@
 @import '../../../styles/variables';
 
 .menu {
-  // padding: 0 1rem;
-  margin-left: 1rem;
-  font-size: 1rem;
-  width: 150px;
-  max-width: 150px;
+  padding-left: 1rem;
+  font-size: 1.2rem;
+  max-width: 100px;
   max-height: 60px;
-  position: relative;
 
   &>* {
-    text-align: center;
+    margin: 0;
     cursor: pointer;
     word-wrap: break-word;
   }
@@ -25,9 +22,9 @@
 
   .logout-button {
     position: absolute;
-    right: 50%;
-    top: 2rem;
-    transform: translate(50%, 50%);
+    width: 80px;
+    height: 50px;
+    right: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,5 +33,6 @@
     span {
       cursor: pointer;
     }
+
   }
 }
