--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,13 +26,6 @@ body {
     justify-content: flex-start;
     align-items: center;
 
-    .main {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
     .hidden {
       visibility: hidden;
     }
